--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,9 @@
 
     
     
-    width: 260px;
+    width: 0,6 em;
     height: 150px;
     border-radius: 5px;
     box-shadow: 4px 4px 4px black;
-
 
 }
